<resources>
    <string name="app_name">CoinBalance</string>
    <string name="report_email">coinbalance.supp@gmail.com</string>
    <string name="report_subject">CoinBalance %1$s.%2$d </string>
    <string name="market_uri">market://details?id=%s</string>
    <string name="play_store_uri">http://play.google.com/store/apps/details?id=%s</string>

    <string name="title_add_wallet">Add wallet</string>
    <string name="title_add_exchange">Add exchange</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="wallet">Wallet</string>
    <string name="exchange">Exchange</string>

    <string name="success_add_wallet">Wallet successfully added</string>
    <string name="success_add_exchange">Exchange successfully added</string>
    <string name="error_coin_not_supported">Coin not supported</string>
    <string name="error_service_not_supported">Service not supported</string>
    <string name="error_loading_wallets">Error, try again pls</string>
    <string name="error_add_wallet_already_exist">Error, that wallet already exist</string>
    <string name="error_add_exchange_already_exist">Error, that key already exist</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_connection">Connection error</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_generating_qr_code">Error generating QR-code</string>
    <string name="action_add_wallet">Add wallet</string>
    <string name="scan_qr_code_prompt">Scan QR-Code of your wallet</string>
    <string name="settings">Settings</string>
    <string name="total_value">Total value</string>
    <string name="address_copied">Address copied to clipboard</string>
    <string name="wallet_status_error">An error occurred while refreshing balance of the wallet, check address and try again pls</string>
    <string name="wallet_status_none">Loading wallet balance, wait pls</string>
    <string name="exchange_status_none">Loading exchange balance, wait pls</string>
    <string name="my_wallet_format">My %s wallet</string>
    <string name="wallet_public_address">Wallet Public Address</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="exchange_title">Exchange Title</string>
    <string name="exchange_api_key">API Key</string>
    <string name="exchange_api_secret">API Secret</string>
    <string name="exchange_add_warning">For security, add API keys with ONLY READ permissions</string>
    <string name="dialog_delete_wallet_message">Delete wallet?</string>
    <string name="dialog_delete_exchange_message">Delete exchange?</string>
    <string name="wallet_empty_message">No wallets available</string>
    <string name="permission_storage_rationale">App needs storage access to import/export config</string>
    <string name="api_keys_agreement_title">API keys agreement</string>
    <string name="api_keys_agreement_message">By adding API keys/secrets you agree that every key/secret has <b>READ ONLY</b> permissions on your exchange account.\n\n<b>CoinBalance is not responsible for your keys</b></string>
    <string name="agree">I agree</string>
    <string name="disagree">I disagree</string>

    <string name="error_how_to_fix_issues">How to fix some common issues</string>
    <string name="wallet_error_common_issues">&#x2022; Make sure that your wallet address is valid\n&#x2022; Make sure that you have stable internet connection\n&#x2022; Maybe block explorer that I use to retrieve wallet balance temporary unavailable. Try to refresh later\n&#x2022; You can write me. I will help you &#x263a;\n  <b>coinbalance.supp@gmail.com</b></string>
    <string name="exchange_error_common_issues">&#x2022; Make sure that your API key and secret are valid\n&#x2022; Make sure that your API is activated\n&#x2022; Make sure that your API key has read balance permissions\n&#x2022; Make sure that your API has never been used in another services and only used by CoinBalance\n&#x2022; Make sure you are not connected via VPN. Some exchanges not allow\n&#x2022; You can write me. I will help you &#x263a;\n  <b>coinbalance.supp@gmail.com</b></string>

    <string name="settings_currency">Profile currency</string>
    <string name="settings_export_config">Export config</string>
    <string name="settings_import_config">Import config</string>
    <string name="settings_rate_app">Rate app</string>
    <string name="settings_donation">Donation</string>
    <string name="settings_share_app">Share app link</string>
    <string name="settings_report_error">Report error</string>
    <string name="settings_about">About</string>
    <string name="file_chooser_title">Choose file</string>

    <string name="success_export">Config successfully exported to %s</string>
    <string name="error_export">Error exporting config</string>
    <string name="success_import">Config successfully imported</string>
    <string name="error_import">Error importing config</string>

    <string name="copy">Copy Address</string>
    <string name="code">QR-code</string>
    <string name="edit">Edit name</string>
    <string name="delete">Delete</string>

    <string name="wallet_address">Wallet Address</string>
    <string name="wallet_value">Wallet Value</string>
    <string name="assets_empty">Assets with non-zero balances not found</string>
    <string name="tokens">Tokens</string>
    <string name="assets">Assets</string>

    <string name="share_text_format">Try CoinBalance app %s</string>
    <string name="send_email">Send email</string>

    <string name="change_24">24h</string>
    <string name="percent">%</string>
    <string name="asset">Asset</string>
    <string name="price">Price</string>
    <string name="holdings">Holdings</string>

    <string name="dialog_rate_ok">Rate</string>
    <string name="dialog_rate_later">Ask later</string>
    <string name="dialog_rate_message">If you enjoy using this app, would you mind to take a moment to rate it? Please support project and let other people to know about this app. Thank you!</string>
    <string name="dialog_rate_title">Rate App</string>

    <string name="dialog_error">Error</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_report_error">Report error</string>

    <string name="purchase_success">Thank you!</string>
    <string name="purchase_consume_error">Error consuming item</string>
    <string name="donation_title">Donation</string>
    <string name="donation_message">Hello, My Friend, do you like this app?\nIt is fully free project with no ads. I am developing it in my spare time, and i need your help to support it and engage other users</string>
    <string name="select_amount">Select an amount</string>
    <string name="donation_1">1 $</string>
    <string name="donation_2">2 $</string>
    <string name="donation_5">5 $</string>
    
    <string name="cd_action_overview">Overview</string>
    <string name="cd_action_profile">Profile</string>
    <string name="cd_action_settings">Settings</string>

    <plurals name="assets_count">
        <item quantity="one">%d asset</item>
        <item quantity="other">%d assets</item>
    </plurals>

    <plurals name="token_count">
        <item quantity="one">%d token</item>
        <item quantity="other">%d tokens</item>
    </plurals>
</resources>
