<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_marginTop="-4dp"
    android:paddingBottom="8dp"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <TextView
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary"
        android:text="@string/percent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:text="@string/asset"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="16dp"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary"
         />

    <TextView
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="12dp"
        android:text="@string/holdings"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary" />

</LinearLayout>