<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:clipToPadding="false"
    android:clipChildren="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.Dialog.Title"
        android:text="@string/donation_title"
        android:gravity="center"
        android:layout_height="?actionBarSize" />

    <TextView
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:lineSpacingMultiplier="1.25"
        android:textAppearance="@style/TextAppearance.Body2"
        android:text="@string/donation_message"
        android:layout_height="wrap_content" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="-6dp"
        android:layout_marginRight="-6dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/donate_1"
            android:text="@string/donation_1"
            android:textSize="18sp"
            style="@style/Button.Borderless"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/donate_2"
            android:layout_weight="1"
            android:text="@string/donation_2"
            style="@style/Button.Borderless"
            android:textSize="18sp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/donate_5"
            android:textSize="18sp"
            android:text="@string/donation_5"
            style="@style/Button.Borderless"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>