<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/total_value"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_surface"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/fiat_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="$ 18.04"
            android:textAppearance="@style/TextAppearance.Body1" />

        <TextView
            android:id="@+id/crypto_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:text="0.003 BTC"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assets_label"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:visibility="gone"
        android:text="@string/assets"
        android:textAppearance="@style/TextAppearance.Caption"
        android:textColor="@color/colorTextSecondary" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/assets_empty"
        android:padding="12dp"
        android:textAppearance="@style/TextAppearance.Subtitle2"
        android:id="@+id/empty_view"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextSecondary"
        android:layout_height="wrap_content" />

</LinearLayout>
