<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/exchange_service_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorAccent" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exchange_api_key"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/api_key_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:paddingEnd="32dp"
                        android:inputType="textVisiblePassword"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/api_key_clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_clear_24dp"
                    android:tint="@color/colorTextSecondary"
                    android:visibility="invisible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exchange_api_secret"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/api_secret_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:paddingEnd="32dp"
                        android:inputType="textVisiblePassword"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/api_secret_clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_clear_24dp"
                    android:tint="@color/colorTextSecondary"
                    android:visibility="invisible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exchange_title"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:paddingEnd="32dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/title_clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_clear_24dp"
                    android:tint="@color/colorTextSecondary"
                    android:visibility="invisible" />

            </FrameLayout>



        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="12dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/submit"
        android:textColor="@android:color/white" />


</LinearLayout>